k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pdri
  labels:
    app.kubernetes.io/name: pdri
    app.kubernetes.io/part-of: pdri-platform
